made cleanup in app.js, moved controllers and directives to appropriate places

--- a/src/main/webapp/client/index.html
+++ b/src/main/webapp/client/index.html
@@ -69,6 +69,9 @@
 <!-- inject:js -->
 <script src="/src/main/webapp/client/app/core/core.module.js"></script>
 <script src="/src/main/webapp/client/app/app.js"></script>
+<script src="/src/main/webapp/client/app/form/form.controller.js"></script>
+<script src="/src/main/webapp/client/app/form/form.directives.js"></script>
+<script src="/src/main/webapp/client/app/form/payment.controllers.js"></script>
 <!-- endinject -->
 <!--<script src="/.clienttmp/templatesClient.js"></script>-->
 
